app4HashingAndChecksum/microservice4/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app4-microservice4
spec:
  selector:
    app: app4-microservice4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8033
  type: ClusterIP
