app4HashingAndChecksum/microservice4/k8s/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: app4-microservice4
spec:
  selector:
    matchLabels:
      app: app4-microservice4
  action: ALLOW
  rules:
  - from:
    - source:
        principals: [
          "cluster.local/ns/default/sa/app4-microservice1"
        ]
